src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Sales_Order__r.Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountWithTwoDecimalPlaces__c</fullName>
        <formula>Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AmountWithTwoDecimalPlaces</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_in_words__c</fullName>
        <label>Amount in words</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attention_To__c</fullName>
        <formula>Sales_Order__r.Client_Approver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attention To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <formula>Sales_Order__r.Customer__r.Billing_Street__c+ &apos;, &apos; + Sales_Order__r.Customer__r.Billing_City__c+ &apos;, &apos; +Sales_Order__r.Customer__r.Billing_State_Province__c+ &apos;, &apos; +Sales_Order__r.Customer__r.Billing_Country__c+ &apos;, &apos; +Sales_Order__r.Customer__r.Billing_Zip_Postal_Code__c+ &apos;. &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <displayFormat>EXT/INV/BRG/2013-14/{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice_Text__c</fullName>
        <label>Invoice Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <formula>Sales_Order__r.Customer__r.Shipping_Street__c +&apos;,&apos;+Sales_Order__r.Customer__r.Shipping_City__c+&apos;,&apos;+Sales_Order__r.Customer__r.Billing_City__c+&apos;,&apos;+Sales_Order__r.Customer__r.Shipping_State_Province__c+&apos;,&apos;+Sales_Order__r.Customer__r.Shipping_Country__c+&apos;,&apos;+ Sales_Order__r.Customer__r.Shipping_Zip_Postal_Code__c</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <label>Tax Percent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <formula>Amount__c +  Total_Invoice_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Tax_Amount__c</fullName>
        <label>Total Invoice Tax Amount</label>
        <summarizedField>Invoice_Line_Item__c.Invoice_LineItem_Tax_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Invoice_Number__c</columns>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>